adding react UI code