@@ -3,6 +3,7 @@ package com.dmart.clone.service;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
@@ -13,34 +14,48 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+import jakarta.annotation.PostConstruct;
+
 @Service
 public class LocalStorageService implements StorageService {
 
 	@Value("${disk.upload.basepath}")
 	private String BASEPATH;
 
+	@PostConstruct
+	public void init() {
+		try {
+			Files.createDirectories(Paths.get(BASEPATH));
+		} catch (IOException e) {
+			throw new RuntimeException("Could not initialize storage", e);
+		}
+	}
+
 	@Override
 	public String store(MultipartFile file, String folder) {
-
 		try {
 			String originalName = StringUtils.cleanPath(file.getOriginalFilename());
 			String ext = originalName.substring(originalName.lastIndexOf('.'));
-			String fileName = UUID.randomUUID().toString() + ext;
+			String fileName = UUID.randomUUID() + ext;
 
-			String dirPath = BASEPATH + "/" + folder;
-			Files.createDirectories(Paths.get(dirPath));
+			Path dirPath = Paths.get(BASEPATH, folder);
+			Files.createDirectories(dirPath);
 
-			file.transferTo(new File(dirPath + "/" + fileName));
-			return dirPath + "/" + fileName; // return relative path
+			file.transferTo(dirPath.resolve(fileName).toFile());
+
+			// return relative URL (for frontend)
+			return "/uploads/" + folder + "/" + fileName;
+
 		} catch (IOException e) {
 			throw new RuntimeException("Failed to store file", e);
 		}
 	}
 
 	@Override
-	public byte[] load(String filePath) {
+	public byte[] load(String fileUrl) {
 		try {
-			return Files.readAllBytes(Paths.get(filePath));
+			String relativePath = fileUrl.replace("/uploads", "");
+			return Files.readAllBytes(Paths.get(BASEPATH, relativePath));
 		} catch (IOException e) {
 			throw new RuntimeException("Failed to read file", e);
 		}
@@ -48,14 +63,19 @@ public class LocalStorageService implements StorageService {
 
 	@Override
 	public List<String> loadAll() {
-		File dirPath = new File(BASEPATH);
-		return Arrays.asList(dirPath.list());
+		File dir = new File(BASEPATH);
+		if (!dir.exists())
+			return List.of();
+
+		return Arrays.stream(dir.listFiles()).filter(File::isFile).map(File::getName).toList();
 	}
 
 	@Override
-	public void delete(String fileName) {
-		File filePath = new File(BASEPATH, fileName);
-		if (filePath.exists())
+	public void delete(String fileUrl) {
+		String relativePath = fileUrl.replace("/uploads", "");
+		File filePath = new File(BASEPATH, relativePath);
+		if (filePath.exists()) {
 			filePath.delete();
+		}
 	}
 }
